@@ -1,3 +1,8 @@
+2020-10-22 Wiley E. Hill <wileyhill@gmail.com>
+
+    * src/gtksheet/gtksheet.c: Add ancillary GdkWindow pointer in function
+      gtk_sheet_realize_handler.
+
 2020-10-21 Wiley E. Hill <wileyhill@gmail.com>
 
     * src/gtksheet/gtksheet.c: Rename gtksheet_signal_emit with an undescore;
